# nl2bi-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.lite.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  prisma.config.ts  pyproject.toml
.github/workflows/: test.yml
data/: sample_db.sql  schema_metadata.json
docs/: 01-langgraph-agent-orchestration.md  02-hybrid-model-routing.md  03-schema-rag.md  04-sql-security.md  README.md
docs/research/: Ai_ResumeBuilder.md
prisma/: schema.prisma
resume-ai/: Dockerfile  README.md  jest.config.mjs  next.config.ts  package-lock.json  package.json
resume-ai/__tests__/: dashboard.test.tsx  utils.test.ts
resume-ai/docs/: LEARN.md
resume-ai/prisma/: schema.prisma
resume-ai/src/: middleware.ts  proxy.ts
scripts/: index_schema.py  init_db.sh  learn_vanna.py  seed_data.py
src/: app.py  config.py  main.py
src/agents/: graph.py  intent.py  interpreter.py  report_planner.py  report_runner.py  schema_rag.py  sql_corrector.py  sql_generator.py  sql_validator.py  state.py
src/api/: auth.py  middleware.py  schemas.py
src/db/: chroma_client.py  connection.py  executor.py
src/models/: base.py  ollama.py  openai_compat.py  router.py
src/prompts/: intent.py  interpreter.py  sql_gen.py
src/rag/: embedder.py  query_history.py  retriever.py  schema_indexer.py
src/utils/: cache.py  data_masker.py  json_parser.py  logger.py  metrics.py  retry.py  sql_parser.py
tests/: conftest.py
tests/integration/: test_query_flow.py
tests/unit/: test_sql_parser.py  test_state.py
(+23 files in other folders)
