[project]
name = "nl2bi-agent"
version = "0.1.0"
description = "Enterprise NL2BI Data Analysis Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "chromadb>=0.5.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlglot>=25.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
